--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "vue": "^2.4.4"
   },
   "devDependencies": {
@@ -23,5 +24,15 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chenggavin/SimonSays.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chenggavin/SimonSays/issues"
+  },
+  "homepage": "https://github.com/chenggavin/SimonSays#readme"
 }
